--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,26 @@
 #game-field {
     position: fixed;
-    top: 50%;
     width: 100%;
-    height: 70%;
+    height: 80%;
     background-color: #03A9F4;
-    transform: translate(0, -50%);
 }
+
+#ground {
+    width: 100%;
+    height: 20%;
+    background-color: #607D8B;
+    top: 80%;
+    position: fixed;
+}
+
+body {
+    margin: 0;
+}
+
+
+
+
+/*TODO
+- use bg image and split it 2 halves, align them to the ground
+
+*/
