--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>KodeKombat</title>
     <script src="{{ url_for('static', filename='js/game.js') }}" defer></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
 {% block content %} {% endblock %}
