style: added div for player one and two

--- a/templates/game.html
+++ b/templates/game.html
@@ -3,7 +3,12 @@
 {% block content %}
 
     <div id="game-field">
-
+        <div id="player-one">
+            <img src="http://ocdn.eu/pulscms-transforms/1/CEZktkpTURBXy8zOTJlN2JmYWJjYTYyMjQ3ZTA1ZjAwYWMxYzQ0MjU0ZS5qcGeRlQLNAmwAwsM" alt="">
+        </div>
+        <div id="player-two">
+            <img src="http://ocdn.eu/pulscms-transforms/1/CEZktkpTURBXy8zOTJlN2JmYWJjYTYyMjQ3ZTA1ZjAwYWMxYzQ0MjU0ZS5qcGeRlQLNAmwAwsM" alt="">
+        </div>
     </div>
     <div id="ground">
 
