--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,19 @@ body {
     margin: 0;
 }
 
+#player-two {
+    left: 80%;
+    bottom: -1%;
+    position: absolute;
+    transition-duration: 0.1s;
+}
 
+#player-one {
+    left: 0;
+    bottom: -1%;
+    position: absolute;
+    transition-duration: 0.1s;
+}
 
 
 /*TODO
