--- a/templates/game.html
+++ b/templates/game.html
@@ -3,9 +3,7 @@
 {% block content %}
 
     <div id="game-field">
-        <img src="/static/background-upper-part.jpg">
+        <img src="/static/bg.gif">
     </div>
-    <div id="ground">
-        <img src="/static/background-down-part.jpg">
-    </div>
+
 {% endblock %}
