feat: players placed on gamefield

--- a/templates/game.html
+++ b/templates/game.html
@@ -7,10 +7,8 @@
 
     </div>
 
-    <img src="https://orig00.deviantart.net/6c39/f/2014/296/5/e/tboc_janet_kyii_fight_stance_anim_by_cvsnb-d83075d.gif"
-         id="player-one">
+    <img src="/static/images/jin_stance.gif" id="player-one">
 
-    <img src="https://orig00.deviantart.net/6c39/f/2014/296/5/e/tboc_janet_kyii_fight_stance_anim_by_cvsnb-d83075d.gif"
-    id="player-two">
+    <img src="/static/images/asuka_stance.gif" id="player-two">
 
 {% endblock %}
