fix: solved favicon.ico error

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
     <title>KodeKombat</title>
     <script src="{{ url_for('static', filename='js/game.js') }}" defer></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
 {% block content %} {% endblock %}
