--- a/templates/game.html
+++ b/templates/game.html
@@ -17,10 +17,12 @@
          data-hp="{{ p2_start_hp }}"
          data-can-move-or-attack="{{ p2_can_move }}">
 
-    <div id="player-one-HP">
+    <div id="player-one-HP" class="HP-bar-container">
+        <div class="delayed-HP-bar"></div>
         <div class="HP-bar"></div>
     </div>
-    <div id="player-two-HP">
+    <div id="player-two-HP" class="HP-bar-container">
+        <div class="delayed-HP-bar"></div>
         <div class="HP-bar"></div>
     </div>
 
